# test-yolo26

./: .gitignore  README.md  pyproject.toml
datasets/football-player-tracker/: README.md
datasets/vehicles/: README.md
src/: detect_image.py  detect_image_2.py  detect_webcam.py
src/train/: vehicles_dataset.py
src/train/vehicles/: test_vehicles_2.py
src/trains/player-tracker/: bundesliga_dataset.ipynb  bundesliga_dataset.py
src/trains/vehicles/: test_vehicles_1.py
